added example pr

--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                     "year": 2026,
                     "website": "https://www.jaidenratti.com/"
                 },
+                {
+                    "name": "John Doe",
+                    "year": 2026,
+                    "website": "https://example.com"
+                }
                 // add your site above
             ]
         };
