--- a/index.html
+++ b/index.html
@@ -87,6 +87,11 @@
                   "name": "Wilbur Zhang",
                   "year": 2026,
                   "website": "https://wilburzhang.com"
+                },
+                {
+                    "name": "Shahan Neda",
+                    "year": 2026,
+                    "website": "https://shahan.ca"
                 }
                 // ↑ ADD YOUR SITE ABOVE ↑
                 // https://github.com/JusGu/uwatering
