Changed website domain

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         },
         {
           "name": "Lucas Jin",
-          "website": "https://www.lucasjin.biz/",
+          "website": "https://www.lucasjin.co/",
           "year": "2030"
         },
         // ↑ ADD YOUR SITE ABOVE ↑
