Added Aadya Khanna

--- a/index.html
+++ b/index.html
@@ -233,8 +233,11 @@
           "website": "https://lohani.ca",
           "year": "2029"
         },
-        // ↑ ADD YOUR SITE ABOVE ↑
-        // https://github.com/JusGu/uwatering
+        {
+          "name": "Aadya khanna",
+          "website": "https://aadyakhanna.com",
+          "year": "2030"
+        }, 
       ]
     };
   </script>
