--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
           "year": "2029"
         },
         {
-          "name": "Aadya khanna",
+          "name": "Aadya Khanna",
           "website": "https://aadyakhanna.com",
           "year": "2030"
         }, 
