--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
         "website": "https://suneru.ca",
         "year": "2029"
         },
+        {
+        "name": "Alba Zalli",
+        "website": "https://alba-zalli.github.io/",
+        "year": "2030"
+        }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
