Add Johannes Tampere.

--- a/index.html
+++ b/index.html
@@ -278,6 +278,11 @@
         "website": "https://suneru.ca",
         "year": "2029"
         },
+        {
+        "name": "Johannes Tampere",
+        "website": "https://johannestampere.com",
+        "year": "2029"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
