--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
         "website": "https://johannestampere.com",
         "year": "2029"
         },
+        "name": "Ruddra Kantaria",
+        "website": "https://ruddrakantaria.com",
+        "year": "2029"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
