Add Lawrence to webring data

--- a/index.html
+++ b/index.html
@@ -293,6 +293,11 @@
         "website": "https://ruddrakantaria.com",
         "year": "2029"
         },
+        {
+        "name": "Lawrence Zou",
+        "website": "https://lawrence-zou.vercel.app",
+        "year": "2029"
+        }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
