--- a/index.html
+++ b/index.html
@@ -297,6 +297,11 @@
         "name": "Lawrence Zou",
         "website": "https://lawrence-zou.vercel.app",
         "year": "2029"
+        },
+        {
+          "name": "Hanz Po",
+          "year": 2029,
+          "website": "https://hanzpo.com"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
