add austin jian to webring

--- a/index.html
+++ b/index.html
@@ -300,6 +300,11 @@
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
+        {
+        "name": "Austin Jian",
+        "website": "https://https://austinjian.ca/",
+        "year": "2030"
+        }
       ]
     };
   </script>
