--- a/index.html
+++ b/index.html
@@ -297,10 +297,10 @@
         "name": "Lawrence Zou",
         "website": "https://lawrence-zou.vercel.app",
         "year": "2029"
-        }
+        },
         {
         "name": "Austin Jian",
-        "website": "https://https://austinjian.ca/",
+        "website": "https://austinjian.ca",
         "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
