--- a/index.html
+++ b/index.html
@@ -308,6 +308,11 @@
         "website": "https://austinjian.ca",
         "year": "2030"
         },
+        {
+        "name": "Zachary Yu",
+        "website": "https://zacharyyu.com",
+        "year": "2030"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
