--- a/index.html
+++ b/index.html
@@ -312,7 +312,13 @@
         "name": "Zachary Yu",
         "website": "https://zacharyyu.com",
         "year": "2030"
+        },        
+        {
+        "name": "Calvin Lee",
+        "website": "https://calvin-lee.ca",
+        "year": "2030"
         },
+        
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
