--- a/index.html
+++ b/index.html
@@ -313,6 +313,11 @@
         "website": "https://zacharyyu.com",
         "year": "2030"
         },
+        {
+        "name": "Angela Xu",
+        "website": "https://angelaxu.design",
+        "year": "2027"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
