Add Jaffer Wehliye to webring

--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
         "website": "https://calvin-lee.ca",
         "year": "2030"
         },
+        {
+        "name": "Jaffer Wehliye",
+        "website": "https://jwehliye.com",
+        "year": "2029"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
