Add William Dai's information

--- a/index.html
+++ b/index.html
@@ -318,6 +318,11 @@
         "website": "https://calvin-lee.ca",
         "year": "2030"
         },
+        {
+          "name": "William Dai",
+          "website": "https://williamdai.dev",
+          "year": "2029"
+        }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
