add patricklin.dev to webring

--- a/index.html
+++ b/index.html
@@ -327,6 +327,11 @@
           "name": "William Dai",
           "website": "https://williamdai.dev",
           "year": "2029"
+        },
+        {
+          "name": "Patrick Lin",
+          "website": "https://patricklin.dev",
+          "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
