--- a/index.html
+++ b/index.html
@@ -332,6 +332,11 @@
           "name": "Patrick Lin",
           "website": "https://patricklin.dev",
           "year": "2028"
+        },
+        {
+          "name": "Om Ogale",
+          "website": "https://omogale.vercel.app/",
+          "year": "2027"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
