--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@
           "name": "Om Ogale",
           "website": "https://omogale.vercel.app/",
           "year": "2027"
+        },
+        {
+          "name": "Isaac Jiang",
+          "website": "https://isaacjiang.ca",
+          "year": "2029"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
