Add my website to index.html

--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@
           "name": "Om Ogale",
           "website": "https://omogale.vercel.app/",
           "year": "2027"
+        },
+        {
+          "name": "Daniel Pu",
+          "website": "https://danielpu.dev",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
