--- a/index.html
+++ b/index.html
@@ -342,6 +342,11 @@
           "name": "Isaac Jiang",
           "website": "https://isaacjiang.ca",
           "year": "2029"
+        },
+        {
+          "name": "Artyom Gabtraupov",
+          "website": "https://artyomg.com",
+          "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
