Update website URL for Lucas Jin

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         },
         {
          "name": "Lucas Jin",
-          "website": "https://www.lucasjin.co/",
+          "website": "https://www.lucasjin.ca/",
           "year": "2030"
         },
         {
