--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
         },
         {
           "name": "Artyom Gabtraupov",
-          "website": "https://artyomg.com",
+          "website": "https://artyomg.com/waterloo-cs-ring",
           "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
