Adding my website to the webring!

--- a/index.html
+++ b/index.html
@@ -352,6 +352,11 @@
           "name": "Artyom Gabtraupov",
           "website": "https://artyomg.com/waterloo-cs-ring",
           "year": "2028"
+        },
+        {
+          "name": "Anahat Chhatwal",
+          "website": "https://anahat-chhatwal.vercel.app",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
