Add Rayyan Moosani to the webring

--- a/index.html
+++ b/index.html
@@ -352,6 +352,13 @@
           "name": "Artyom Gabtraupov",
           "website": "https://artyomg.com/waterloo-cs-ring",
           "year": "2028"
+        },
+        {
+
+          "name": "Rayyan Moosani",
+          "website": "https://www.rayyanmoosani.com/",
+          "year": "2030"
+          
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
