--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
           "name": "Anahat Chhatwal",
           "website": "https://anahat-chhatwal.vercel.app",
           "year": "2030"
+        },
+        {
+          "name": "Emma Xing",
+          "website": "https://emma-x1.github.io/",
+          "year": "2029"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
