--- a/index.html
+++ b/index.html
@@ -367,6 +367,11 @@
           "name": "Emma Xing",
           "website": "https://emma-x1.github.io/",
           "year": "2029"
+        },
+        {
+          "name": "Tanvir Sarao",
+          "website": "https://tanvirsarao.com/",
+          "year": "2029"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
