--- a/index.html
+++ b/index.html
@@ -357,6 +357,11 @@
           "name": "Emma Xing",
           "website": "https://emma-x1.github.io/",
           "year": "2029"
+        },
+        {
+          "name": "Benny Wu",
+          "website": "https://bennywu.me/",
+          "year": "2027"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
