--- a/index.html
+++ b/index.html
@@ -372,6 +372,11 @@
           "name": "Tanvir Sarao",
           "website": "https://tanvirsarao.com/",
           "year": "2029"
+        },
+        {
+          "name": "Sunny Wu",
+          "website": "https://sunny-wu.vercel.app/",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
