--- a/index.html
+++ b/index.html
@@ -377,6 +377,11 @@
           "name": "Samuel Zhang",
           "website": "https://samuelzhang.ca",
           "year": "2028"
+        },
+        {
+          "name": "Eric Liu",
+          "website": "https://ericliu.ca",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
