add www.liamc.ca to index.html webring data

--- a/index.html
+++ b/index.html
@@ -377,6 +377,11 @@
           "name": "Samuel Zhang",
           "website": "https://samuelzhang.ca",
           "year": "2028"
+        },
+        {
+          "name": "Liam Cox",
+          "website": "https://www.liamc.ca",
+          "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
