Add Peter Lian to the contributors list

--- a/index.html
+++ b/index.html
@@ -392,6 +392,11 @@
           "name": "Liam Cox",
           "website": "https://www.liamc.ca",
           "year": "2028"
+        },
+        {
+          "name": "Peter Lian",
+          "website": "https://peterlian.com/",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
