--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
         },
         {
           "name": "Jerry Cui",
-          "website": "jerrycui.com",
+          "website": "https://jerrycui.com",
           "year": "2030"
         },
         {
