Add Mohammad Samin to webringData

--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
     const webringData = {
       "sites": [
         {
+        "name": "Mohammad Samin",
+        "website": "https://msamin.com",
+        "year": "2030"
+        },  
+        {
           "name": "Justin Gu",
           "year": 2026,
           "website": "https://justin.run"
