https://austinjiang.com/

--- a/index.html
+++ b/index.html
@@ -402,6 +402,11 @@
           "name": "Fay Wu",
           "website": "https://faywu.ca/",
           "year": "2030"
+        },
+        {
+          "name": "Austin Jiang",
+          "website": "https://austinjiang.com/",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
