--- a/index.html
+++ b/index.html
@@ -408,6 +408,11 @@
           "website": "https://austinjiang.com/",
           "year": "2030"
         }
+        {
+          "name": "Mohammad Samin",
+          "website": "https://www.msamin.com/",
+          "year": "2030"
+        }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
