Add David Youssef to watering

--- a/index.html
+++ b/index.html
@@ -407,6 +407,11 @@
           "name": "Austin Jiang",
           "website": "https://austinjiang.com/",
           "year": "2030"
+        },
+        {
+          "name": "David Youssef",
+          "website": "https://david-m-youssef.vercel.app/",
+          "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
