Add Moayyad Shahid to webring

--- a/index.html
+++ b/index.html
@@ -407,6 +407,11 @@
           "name": "Austin Jiang",
           "website": "https://austinjiang.com/",
           "year": "2030"
+        },
+        {
+          "name": "Moayyad Shahid",
+          "website": "https://moayyadshahid.com/",
+          "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
