--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
           "name": "David Youssef",
           "website": "https://david-m-youssef.vercel.app/",
           "year": "2030"
+        },
+        {
+          "name": "Thomas Qi",
+          "website": "https://thomasqi.com/",
+          "year": "2028"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
