--- a/index.html
+++ b/index.html
@@ -417,7 +417,12 @@
           "name": "David Youssef",
           "website": "https://david-m-youssef.vercel.app/",
           "year": "2030"
-        }
+        },
+        {
+          "name": "Kim Guo",
+          "website": "https://kimguo.xyz",
+          "year": "2028"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
