--- a/index.html
+++ b/index.html
@@ -379,8 +379,6 @@
           "year": "2028"
         },
         {
-          "name": "Kim Guo",
-          "website": "https://kimguo.xyz",
           "name": "Jerry Cui",
           "website": "https://jerrycui.com",
           "year": "2030"
@@ -414,7 +412,12 @@
           "name": "Moayyad Shahid",
           "website": "https://moayyadshahid.com/",
           "year": "2028"
-        }
+        },
+        {
+          "name": "Kim Guo",
+          "website": "https://kimguo.xyz",
+          "year": "2028"
+        },
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
