--- a/index.html
+++ b/index.html
@@ -417,7 +417,12 @@
           "name": "David Youssef",
           "website": "https://david-m-youssef.vercel.app/",
           "year": "2030"
-        }
+        }, 
+        {
+          "name": "Anushka Punukollu",
+          "website": "https://anushkapunukollu.com/",
+          "year": "2030"
+        }.
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
       ]
