Add Ammar Adam to webring
Hi! I'm Ammar, and I'm in 1B CFM. Built an airport-themed portfolio and excited to join the web ring!

--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
           "name": "David Youssef",
           "website": "https://david-m-youssef.vercel.app/",
           "year": "2030"
+        },
+        {
+        "name": "Ammar Adam",
+        "website": "https://ammaradam.com/", 
+        "year": "2030"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
