Add Rahul Tandon to the contributors list

--- a/index.html
+++ b/index.html
@@ -417,6 +417,11 @@
           "name": "David Youssef",
           "website": "https://david-m-youssef.vercel.app/",
           "year": "2030"
+        },
+        {
+          "name": "Rahul Tandon",
+          "website": "https://www.linkedin.com/in/tandon-rahul/",
+          "year": "2026"
         }
         // ↑ ADD YOUR SITE ABOVE ↑
         // https://github.com/JusGu/uwatering
